<resources>
    <string name="app_name">La Suprema</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Ventas</string>
    <string name="menu_gallery">Inventario</string>
    <string name="menu_slideshow">Productos</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_Reportes">Reportes</string>
    <string name="menu_Carga">Carga</string>


    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
