<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_local_grocery_store_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_work_black_24dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_clientes" />
        <item
            android:id="@+id/nav_reportes"
            android:icon="@drawable/ic_assignment_turned_in_black_24dp"
            android:title="@string/menu_Reportes" />
        <item
            android:id="@+id/nav_carga"
            android:icon="@drawable/ic_local_shipping_black_24dp"
            android:title="@string/menu_Carga" />

    </group>
</menu>
