<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lasuprema.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.lasuprema.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.lasuprema.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.example.lasuprema.ui.clientes.Clientes"
        android:label="@string/menu_clientes"
        tools:layout="@layout/fragment_clientes" />
    <fragment
        android:id="@+id/nav_reportes"
        android:name="com.example.lasuprema.ReportesFragment"
        android:label="@string/menu_Reportes"
        tools:layout="@layout/fragment_reportes" />
    <fragment
        android:id="@+id/nav_carga"
        android:name="com.example.lasuprema.ui.carga.CargaFragment"
        android:label="@string/menu_Carga"
        tools:layout="@layout/fragment_carga" />
</navigation>